2011-01-22  Masaaki Aoyagi

	* Rakefile: change to use gnome2-raketask.rb.

2010-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: don't add .zip into gem.

	* lib/atk.rb: support bundled Windows DLL.

2010-09-21  Kouhei Sutou  <kou@cozmixng.org>

	* Rakefile: add dependency.

	* ./: make buildable with rake-compiler.

	* src/: -> ext/atk/

	* src/lib/: -> lib/

2009-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: use RUBYARCHDIR.
	Patch by OBATA Akio. Thanks!!!

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/: use RARRAY_PTR() and RARRAY_LEN().

2008-06-11  Kouhei Sutou  <kou@cozmixng.org>

	* extconf.rb: include atk/atk.h in have_func test.

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: don't use ftools.
	Reported by Carlo E. Prelz. Thanks!!!

2007-12-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbatktext.c (rbatk_text_remove_selection): used gint for "%d".

2007-08-31  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* src/depend: re-supported build in no-source directory.

2007-07-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbatktextrange.c: change Atk::TextRange not to be a subclass of
	Atk::TextRectangle.

2007-07-14  Detlef Reichl

	* extconf.rb: Accept the srcdir includes spaces.

2007-07-13  Guillaume Cottenceau

	* src/rbatkobject.c: replace RTEST uses by RVAL2CBOOL
	
2007-07-08  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*.c: use rb_block_proc directly instead of using G_BLOCK_PROC().

2007-06-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbatkeditabletext.c: fix to compile on ruby 1.9
	  RSTRING(v)->len -> RSTRING_LEN(v).

	* src/rbatkdocument.c: Define Atk::Document#locale only when Atk is 1.12 or later.
	Earlier version of Atk doesn't have atk_document_get_locale(),
	although it's not listed at <http://developer.gnome.org/doc/API/2.0/atk/ix07.html>.

2006-12-26  Masao Mutoh  <mutoh@highway.ne.jp>

	* extconf.rb: Work MinGW again.

2006-11-28  Masao Mutoh  <mutoh@highway.ne.jp>
