@@ -1,3 +1,8 @@
+2011-01-30  Kouhei Sutou  <kou@cozmixng.org>
+
+	* Rakefile, ext/atk/extconf.rb: share depended packages
+	vendor/local/.
+
 2011-01-22  Masaaki Aoyagi
 
 	* Rakefile: change to use gnome2-raketask.rb.
